# waw-tace-radiomics

./: README.md  RadiomicsNotebook.ipynb  RadiomicsSigNoteBook.ipynb  hello.py  pyproject.toml  requirements.txt
data/: all_data_1.csv  all_data_2.csv
notebook/: RadiomicsSigNoteBook.ipynb
notebooks/: 1_image_preprocessing.ipynb  1_image_preprocessing_and_radiomic_feature_extraction.ipynb  2_model_training.ipynb  RadiomicsSigNotebook.ipynb  display_lib.py  test_patients
params/: params-template.yaml
scripts/: compile-dataset.py  extract-features.py  get-dataset.py  lib.py  set-params.py
waw-tace-radiomics/notebook/: RadiomicsSigNoteBook.ipynb
